Fixed Scrollbar issues in IE

--- a/sass/partials/_flag-lines-solar-road.scss
+++ b/sass/partials/_flag-lines-solar-road.scss
@@ -46,7 +46,7 @@
 
 .c3xgm-about-solar-road-container {
 	width: 100%;
-	overflow-x:hidden;
+	// overflow-x:hidden;
 
 	.c3xgm-about-solar-road-list {
 		width: 200%;
@@ -59,7 +59,7 @@
 
 			img {
 				display:inline-block;
-				margin-bottom: -2px;
+				// margin-bottom: -2px;
 				z-index: -2;
 			}
 
