--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -4541,7 +4541,6 @@ Stylesheet: Helpers
 /* line 47, ../sass/partials/_flag-lines-solar-road.scss */
 .c3xgm-about-solar-road-container {
   width: 100%;
-  overflow-x: hidden;
 }
 /* line 51, ../sass/partials/_flag-lines-solar-road.scss */
 .c3xgm-about-solar-road-container .c3xgm-about-solar-road-list {
@@ -4557,7 +4556,6 @@ Stylesheet: Helpers
 /* line 60, ../sass/partials/_flag-lines-solar-road.scss */
 .c3xgm-about-solar-road-container .c3xgm-about-solar-road-list li img {
   display: inline-block;
-  margin-bottom: -2px;
   z-index: -2;
 }
 /* line 66, ../sass/partials/_flag-lines-solar-road.scss */
